Integrated bcrypt. User passwords are now hashed then stored in db. Signup and signin work. Changed mongodb DB Url. Was having issues with connecting from home. Scowered Stackoverflow and finally found issues similar to what I was having. Changed the db URL and added query parameters like ssl set to true.

--- a/public/stylesheets/less/login.less
+++ b/public/stylesheets/less/login.less
@@ -1,1 +1,11 @@
 @import 'main.less';
+.error {
+  padding: 3em;
+  border: 2px solid #f35353;
+  background-color: rgba(251, 78, 78, 0.4);
+}
+
+.message {
+  padding: 3em;
+  background-color: transparent;
+}
